Fix code block spacing

--- a/assets/scss/_code.scss
+++ b/assets/scss/_code.scss
@@ -10,6 +10,7 @@ code {
 .code-file-name,
 .highlight {
 	code {
+		padding: 0;
 		background: none;
 	}
 }
